[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wmipa"
version = "0.1.8"
description = "Weighted Model Integration PA (Predicate Abstraction) solver."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "wmipa team" }
]
requires-python = ">=3.9.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "networkx",
    "numpy",
    "PySMT>=0.9.7.dev333",
    "scipy",
    "z3-solver",
]

[project.urls]
Homepage = "https://github.com/unitn-sml/wmi-pa"
Repository = "https://github.com/unitn-sml/wmi-pa"

[project.optional-dependencies]
test = ["pytest", "pytest-runner", "pytest-cov"]
typing = [
    "mypy",
    "types-networkx; python_version>='3.10'",
    "scipy-stubs; python_version>='3.11'",
]
#nra = ["pysmt @ git+https://git@github.com/masinag/pysmt@nrat#egg=pysmt"]

[project.scripts]
wmipa = "wmipa.cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]

files = ["src/wmipa/"]  # files to check

[[tool.mypy.overrides]]
module = ["mathsat", "pysmt.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["test"]
